public/global.css
:root{
	--primary: rgb(224, 64, 64);
	--secondary: #116883;
	--white: #fff;
	--black: rgb(26, 26, 26);
	--gray: rgb(190, 190, 190);
	--slow: 0.5s;
	--normal: 0.3s;
	--fast: 0.1s;
}

html, body {
	position: relative;
	width: 100%;
	height: 100%;
}

body {
	background-color: var(--black);
	color: var(--white);
	margin: 1em;
	box-sizing: border-box;
	font-family: 'Lato', Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}

@media (max-width: 700px){
	body{
		font-size: 11px;
	}
	
}

h1, h2, h3, h4, h5, h6{
	font-family: 'Roboto Mono';
	margin-top: auto;
	margin-bottom: auto;
	text-transform: lowercase;
}

h3{
	font-size: 1.5em;
}
p{
	color: var(--gray);
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

li{
	color: var(--gray);
}

.tag {
	font-style: italic;
	margin-top: 1em;
	margin-bottom: 1em;
	font-size: 0.8em;
	color: var(--gray);
}

.sb1{
	margin-bottom: 1em;
}
.sb2{
	margin-bottom: 2em;
}
.sb3{
	margin-bottom: 3em;
}

a {
	color: var(--gray);
	text-decoration: none;
	outline: none;
}

a:hover {
	color: var(--white);
}

label {
	display: block;
}

.content{
	max-width: 1200px;
	margin: 0 auto;
}

.content h1{
	margin-bottom: 2em;
}

.content h2{
	margin-bottom: 0;
}

.content h3{
	margin-bottom: 1em;
}

.content img{
    width: 100%;
}

.content .img-wide{
	max-height: 300px;
	width: 100%;
	object-fit: cover;
}

@media (max-width: 700px){
	.content .img-wide{
		max-height: 150px;
	}
}

.segment{
	margin-top: 3em;
	margin-bottom: 1em;
	padding-bottom: 1em;
}

.segment img{
	object-fit: cover;
}

code{
	color: var(--gray);
	position: relative;
	font-size: 0.9em;
	font-family: 'Roboto Mono';
	padding: 1px;
	border-radius: 3px;
	background-color: rgb(0, 0, 0);
}

